[feat] activate parallel search with CompletableFuture